<resources>
    <string name="app_name">TimerNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_chart">Chart</string>
    <string name="menu_log">Log</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="lap1_text">10 m: </string>
    <string name="lap2_text">20 m: </string>
    <string name="lap3_text">30 m: </string>
    <string name="lap4_text">40 m: </string>
    <string name="lap5_text">50 m: </string>
    <string name="lap6_text">60 m: </string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="id_number">ID Number</string>

    <string name="logfragment_tab1_title">User</string>
    <string name="logfragment_tab2_title">Date</string>
    <string name="title_activity_log_user">LogUserActivity</string>

    <string name="user_id">ID : </string>
    <string name="date">Date : </string>
    <string name="reset">reset</string>
    <string name="ready">ready</string>
    <string name="dialog_message">Cek Alat-Alat</string>
    <string name="dialog_title">Error</string>
    <string name="ok">OK</string>
</resources>
