<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity"
    android:background="#4a4a4a">

    <TextView
        android:text="@string/lap1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lap1_text" style="@style/LapStyle"
        app:layout_constraintBottom_toTopOf="@+id/lap2_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:text="@string/lap2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lap2_text" style="@style/LapStyle"
        app:layout_constraintBottom_toTopOf="@+id/lap3_text" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lap1_text"/>
    <TextView
        android:text="@string/lap3_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lap3_text"
        style="@style/LapStyle"
        app:layout_constraintBottom_toTopOf="@+id/lap4_text" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lap2_text"/>
    <TextView
        android:text="@string/lap4_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lap4_text" style="@style/LapStyle"
        app:layout_constraintBottom_toTopOf="@+id/lap5_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lap3_text"/>
    <TextView
        android:text="@string/lap5_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lap5_text" style="@style/LapStyle"
        app:layout_constraintBottom_toTopOf="@+id/lap6_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lap4_text"/>
    <TextView
        android:text="@string/lap6_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lap6_text" style="@style/LapStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/lap6Result_text"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/lap1Result_text" style="@style/LapStyle"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/lap2Result_text"
        app:layout_constraintStart_toEndOf="@+id/lap1_text" app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintEnd_toEndOf="parent" android:hapticFeedbackEnabled="false"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/lap2Result_text" style="@style/LapStyle"
        app:layout_constraintTop_toBottomOf="@+id/lap1Result_text"
        app:layout_constraintBottom_toTopOf="@+id/lap3Result_text"
        app:layout_constraintStart_toEndOf="@+id/lap2_text"
        app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/lap3Result_text" style="@style/LapStyle"
        app:layout_constraintTop_toBottomOf="@+id/lap2Result_text"
        app:layout_constraintBottom_toTopOf="@+id/lap4Result_text"
        app:layout_constraintStart_toEndOf="@+id/lap3_text"
        app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/lap4Result_text" style="@style/LapStyle"
        app:layout_constraintTop_toBottomOf="@+id/lap3Result_text"
        app:layout_constraintBottom_toTopOf="@+id/lap5Result_text"
        app:layout_constraintStart_toEndOf="@+id/lap4_text"
        app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/lap5Result_text" style="@style/LapStyle"
        app:layout_constraintTop_toBottomOf="@+id/lap4Result_text"
        app:layout_constraintBottom_toTopOf="@+id/lap6Result_text"
        app:layout_constraintStart_toEndOf="@+id/lap5_text"
        app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/lap6Result_text" style="@style/LapStyle"
        app:layout_constraintTop_toBottomOf="@+id/lap5Result_text"
        app:layout_constraintStart_toEndOf="@+id/lap6_text" app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/call_button"/>
    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/call_button" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/call_button"/>

    <Button
        android:id="@+id/call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/save_button" />

</androidx.constraintlayout.widget.ConstraintLayout>